fix: css height and conversation overflow

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,7 +1,6 @@
 .NavBar {
-  height: 7.5vh;
+  height: 5vh;
   background-color: aqua;
-  border: 1px solid #e5e5e5;
   display: flex;
   justify-content: end;
 }
